force-app/main/default/objects/WorkOrder/fields/Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Accept_Date__c</fullName>
    <description>Acorn Acceptance Date information being populated on the Work Order</description>
    <label>Accept Date</label>
    <type>DateTime</type>
</CustomField>