force-app/main/default/objects/WorkOrder/fields/Accept_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Accept_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who accepted a work order</description>
    <label>Accept User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>