force-app/main/default/objects/WorkOrder/fields/Accept_User_name__c.field-meta.xml
<CustomField>
    <fullName>Accept_User_name__c</fullName>
    <label>Accept Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>