force-app/main/default/objects/WorkOrder/fields/Acorn_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Id referencing the Acorn Contact</description>
    <label>Acorn Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>