force-app/main/default/objects/WorkOrder/fields/Acorn_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Issue_Id__c</fullName>
    <description>Field to capture acorn issue id information - back-end only</description>
    <label>Acorn Issue Id</label>
    <type>TextArea</type>
</CustomField>