force-app/main/default/objects/WorkOrder/fields/Acorn_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Location_ID__c</fullName>
    <formula>Account.Acorn_Location_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn Location ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>