force-app/main/default/objects/WorkOrder/fields/Acorn_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Purchase_Order_Number__c</fullName>
    <description>This field contains WO purchase number and populating PO number from Acorn.</description>
    <label>Acorn Purchase Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>