force-app/main/default/objects/WorkOrder/fields/Acorn_SID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SID__c</fullName>
    <description>Acorn Service Header ID (SID)</description>
    <label>Acorn SID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>