force-app/main/default/objects/WorkOrder/fields/Acorn_SID_Text__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SID_Text__c</fullName>
    <formula>TEXT( Acorn_SID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn SID</label>
    <type>Text</type>
</CustomField>