force-app/main/default/objects/WorkOrder/fields/Acorn_Update_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Update_Datetime__c</fullName>
    <description>Last time record was updated in Acorn</description>
    <label>Acorn Update Datetime</label>
    <type>DateTime</type>
</CustomField>