force-app/main/default/objects/WorkOrder/fields/Acorn_WO_No__c.field-meta.xml
<CustomField>
    <fullName>Acorn_WO_No__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Acorn_WorkOrder_Number__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn Work Order Number</label>
    <type>Text</type>
</CustomField>