force-app/main/default/objects/WorkOrder/fields/Acorn_WorkOrder_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_WorkOrder_Id__c</fullName>
    <label>Acorn WorkOrder Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>