force-app/main/default/objects/WorkOrder/fields/Acorn_WorkOrder_Number__c.field-meta.xml
<CustomField>
    <fullName>Acorn_WorkOrder_Number__c</fullName>
    <label>Acorn WorkOrder Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>