force-app/main/default/objects/WorkOrder/fields/Actual_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Date__c</fullName>
    <label>Actual Service Date</label>
    <type>DateTime</type>
</CustomField>