force-app/main/default/objects/WorkOrder/fields/Asset_Material__c.field-meta.xml
<CustomField>
    <fullName>Asset_Material__c</fullName>
    <formula>TEXT(Asset.Material_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Material</label>
    <type>Text</type>
</CustomField>