force-app/main/default/objects/WorkOrder/fields/Asset_Position__c.field-meta.xml
<CustomField>
    <fullName>Asset_Position__c</fullName>
    <formula>Asset.Container_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Position</label>
    <type>Text</type>
</CustomField>