force-app/main/default/objects/WorkOrder/fields/AssetMaterial__c.field-meta.xml
<CustomField>
    <fullName>AssetMaterial__c</fullName>
    <formula>Asset.Name + &quot; / &quot; + Asset_Material__c</formula>
    <label>Asset / Material</label>
    <type>Text</type>
</CustomField>