force-app/main/default/objects/WorkOrder/fields/Back_Dated_WO__c.field-meta.xml
<CustomField>
    <fullName>Back_Dated_WO__c</fullName>
    <description>Boolean to find the Back Dated Workorder</description>
    <formula>IF(DATEVALUE(CreatedDate)  &gt; Service_Date__c , 1, 0)</formula>
    <label>Back Dated WO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>