force-app/main/default/objects/WorkOrder/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <formula>Case.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Id</label>
    <type>Text</type>
</CustomField>