force-app/main/default/objects/WorkOrder/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <formula>Text(Case.Case_Reason__c)</formula>
    <label>Case Reason</label>
    <type>Text</type>
</CustomField>