force-app/main/default/objects/WorkOrder/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <formula>Text(Case.Case_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subtype</label>
    <type>Text</type>
</CustomField>