force-app/main/default/objects/WorkOrder/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Client Name)</relationshipLabel>
    <relationshipName>Work_Orders_Client</relationshipName>
    <type>Lookup</type>
</CustomField>