force-app/main/default/objects/WorkOrder/fields/Client_PO__c.field-meta.xml
<CustomField>
    <fullName>Client_PO__c</fullName>
    <formula>Case.PurchaseOrder_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client PO #</label>
    <type>Text</type>
</CustomField>