force-app/main/default/objects/WorkOrder/fields/Company_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Category__c</fullName>
    <formula>Asset.Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Category</label>
    <type>Text</type>
</CustomField>