force-app/main/default/objects/WorkOrder/fields/Container_Position__c.field-meta.xml
<CustomField>
    <fullName>Container_Position__c</fullName>
    <formula>Asset.Container_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Position</label>
    <type>Text</type>
</CustomField>