force-app/main/default/objects/WorkOrder/fields/Created_Date_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Created_By__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))+ &quot;/&quot; + TEXT(DAY(DATEVALUE(CreatedDate)))+ &quot;/&quot; + TEXT(YEAR(DATEVALUE(CreatedDate))) + &quot; / &quot; + CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date / Created By</label>
    <type>Text</type>
</CustomField>