force-app/main/default/objects/WorkOrder/fields/Customer_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interaction_ID__c</fullName>
    <description>The connection ID or interaction ID of the last customer call or email respectively</description>
    <externalId>true</externalId>
    <label>Customer Interaction ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>