force-app/main/default/objects/WorkOrder/fields/Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Decline_Date__c</fullName>
    <description>Work Order decline date</description>
    <label>Decline Date</label>
    <type>DateTime</type>
</CustomField>