force-app/main/default/objects/WorkOrder/fields/Decline_User__c.field-meta.xml
<CustomField>
    <fullName>Decline_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who declined the work order</description>
    <label>Decline User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>