force-app/main/default/objects/WorkOrder/fields/Decline_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Decline_User_Name__c</fullName>
    <label>Decline Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>