force-app/main/default/objects/WorkOrder/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>IF(AND(CaseId != null , TEXT(Case.Case_Type__c) != null) ,   TEXT(Case.Case_Type__c) + &quot; - &quot; + TEXT(Case.Case_Sub_Type__c) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>