force-app/main/default/objects/WorkOrder/fields/Dispatch_Email__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Email__c</fullName>
    <label>Dispatch Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>