force-app/main/default/objects/WorkOrder/fields/Dry_Run_Cost_NOT_IN_USE__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Cost_NOT_IN_USE__c</fullName>
    <formula>Dry_Run_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dry Run Cost NOT IN USE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>