force-app/main/default/objects/WorkOrder/fields/Dry_Run_Description__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Description__c</fullName>
    <label>Dry Run Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>