force-app/main/default/objects/WorkOrder/fields/Dry_Run_Price__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Price__c</fullName>
    <label>Dry Run Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>