force-app/main/default/objects/WorkOrder/fields/Dry_Run_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Root_Cause__c</fullName>
    <label>Dry Run Root Cause</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>