force-app/main/default/objects/WorkOrder/fields/Exception_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Description__c</fullName>
    <label>Cancellation Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>