force-app/main/default/objects/WorkOrder/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked Can</fullName>
            </value>
            <value>
                <fullName>Client&apos;s Request</fullName>
            </value>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Equipment Issues</fullName>
            </value>
            <value>
                <fullName>Schedule Change - Client</fullName>
            </value>
            <value>
                <fullName>Schedule Change - Vendor</fullName>
            </value>
            <value>
                <fullName>Weather Conditions</fullName>
            </value>
            <value>
                <fullName>Vendor did not perform service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Incorrect Service</fullName>
            </value>
            <value>
                <fullName>Incorrect Service Date</fullName>
            </value>
            <value>
                <fullName>Incorrect Hauler</fullName>
            </value>
            <value>
                <fullName>Incorrect Work-Order Description</fullName>
            </value>
            <value>
                <fullName>Incorrect Amount</fullName>
            </value>
            <value>
                <fullName>Work Order Cleanup</fullName>
            </value>
            <value>
                <fullName>Incorrect Container Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>