force-app/main/default/objects/WorkOrder/fields/Expected_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Service_Date__c</fullName>
    <label>Expected Service Date</label>
    <type>DateTime</type>
</CustomField>