force-app/main/default/objects/WorkOrder/fields/Fast_Lane_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Fast_Lane_Ticket__c</fullName>
    <label>Fast Lane Ticket</label>
    <type>TextArea</type>
</CustomField>