force-app/main/default/objects/WorkOrder/fields/Integration_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Integration_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Eligible</label>
    <type>Checkbox</type>
</CustomField>