force-app/main/default/objects/WorkOrder/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Resend</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>