force-app/main/default/objects/WorkOrder/fields/Interface_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Interface_Triggered__c</fullName>
    <label>Interface Triggered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>