force-app/main/default/objects/WorkOrder/fields/Is_Override_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Override_Duplicate__c</fullName>
    <formula>OR(Case.Bypass_WO_Duplicate__c, AND( Case.Create_AM_and_PM_Pickups__c, $Profile.Name &lt;&gt; &quot;System Administrator&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Override Duplicate</label>
    <type>Checkbox</type>
</CustomField>