force-app/main/default/objects/WorkOrder/fields/IVR_Specific_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>IVR_Specific_Exception_Reason__c</fullName>
    <description>S10_7602: This field is use to store IVR Exception reason.</description>
    <label>IVR Specific Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>