force-app/main/default/objects/WorkOrder/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>latitude information from Acorn</description>
    <label>Latitude</label>
    <length>18</length>
    <type>Text</type>
</CustomField>