force-app/main/default/objects/WorkOrder/fields/Local_Time__c.field-meta.xml
<CustomField>
    <fullName>Local_Time__c</fullName>
    <formula>Vendor_Account_Id__r.tz__Local_Time_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>