force-app/main/default/objects/WorkOrder/fields/Longitide__c.field-meta.xml
<CustomField>
    <fullName>Longitide__c</fullName>
    <description>longitude information from Acorn</description>
    <label>Longitide</label>
    <length>18</length>
    <type>Text</type>
</CustomField>