force-app/main/default/objects/WorkOrder/fields/Manifest_Number__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Number__c</fullName>
    <label>Manifest Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>