force-app/main/default/objects/WorkOrder/fields/Marked_as_Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_Dry_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked as Dry Run</label>
    <type>Checkbox</type>
</CustomField>