force-app/main/default/objects/WorkOrder/fields/MAS_Case__c.field-meta.xml
<CustomField>
    <fullName>MAS_Case__c</fullName>
    <label>MAS Case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>