force-app/main/default/objects/WorkOrder/fields/MAS_Ticket__c.field-meta.xml
<CustomField>
    <fullName>MAS_Ticket__c</fullName>
    <label>MAS Ticket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>