force-app/main/default/objects/WorkOrder/fields/Negative_HOC__c.field-meta.xml
<CustomField>
    <fullName>Negative_HOC__c</fullName>
    <label>Vendor Image</label>
    <type>Url</type>
</CustomField>