force-app/main/default/objects/WorkOrder/fields/No_Route_Evidence__c.field-meta.xml
<CustomField>
    <fullName>No_Route_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Route Evidence</label>
    <type>Checkbox</type>
</CustomField>