force-app/main/default/objects/WorkOrder/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <formula>Case.Site_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onsite Contact</label>
    <type>Text</type>
</CustomField>