force-app/main/default/objects/WorkOrder/fields/Onsite_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Phone__c</fullName>
    <formula>Case.Site_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onsite Contact Phone</label>
    <type>Text</type>
</CustomField>