force-app/main/default/objects/WorkOrder/fields/Original_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Expected_Date__c</fullName>
    <label>Original Expected Date</label>
    <type>Date</type>
</CustomField>