force-app/main/default/objects/WorkOrder/fields/Pickup_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Pickup_DateTime__c</fullName>
    <label>Pickup DateTime</label>
    <type>DateTime</type>
</CustomField>