force-app/main/default/objects/WorkOrder/fields/Profile_Description__c.field-meta.xml
<CustomField>
    <fullName>Profile_Description__c</fullName>
    <label>Profile Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>