force-app/main/default/objects/WorkOrder/fields/Profile_Generator__c.field-meta.xml
<CustomField>
    <fullName>Profile_Generator__c</fullName>
    <label>Profile Generator</label>
    <type>TextArea</type>
</CustomField>