force-app/main/default/objects/WorkOrder/fields/Profile_Number__c.field-meta.xml
<CustomField>
    <fullName>Profile_Number__c</fullName>
    <label>Profile Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>