force-app/main/default/objects/WorkOrder/fields/Profile_Number_Case__c.field-meta.xml
<CustomField>
    <fullName>Profile_Number_Case__c</fullName>
    <formula>Case.Profile_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Number</label>
    <type>Text</type>
</CustomField>