force-app/main/default/objects/WorkOrder/fields/Profile_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Profile_Purchase_Order__c</fullName>
    <description>this is the landfill ticket number issues by another corporation</description>
    <label>Profile Purchase Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>