force-app/main/default/objects/WorkOrder/fields/PSI__c.field-meta.xml
<CustomField>
    <fullName>PSI__c</fullName>
    <label>PSI</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>