force-app/main/default/objects/WorkOrder/fields/PSI_Bypass_Reason__c.field-meta.xml
<CustomField>
    <fullName>PSI_Bypass_Reason__c</fullName>
    <formula>Text(Case.PSI_Override_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSI Bypass Reason</label>
    <type>Text</type>
</CustomField>