force-app/main/default/objects/WorkOrder/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Vendor will be using these to notify a a customer on why their work order was rejected.</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>