force-app/main/default/objects/WorkOrder/fields/Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Date__c</fullName>
    <label>Rescheduled Date</label>
    <type>DateTime</type>
</CustomField>