force-app/main/default/objects/WorkOrder/fields/Return_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Return_DateTime__c</fullName>
    <label>Return DateTime</label>
    <type>DateTime</type>
</CustomField>