force-app/main/default/objects/WorkOrder/fields/Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Send_Status__c</fullName>
    <label>Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed (Send Manually)</fullName>
            </value>
            <value>
                <fullName>Failed (System will Retry)</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
            </value>
            <value>
                <fullName>Accepted by MAS</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Confirmation Wait</fullName>
                <isActive>false</isActive>
                <label>Confirmation Wait</label>
            </value>
            <value>
                <fullName>Failed Send</fullName>
                <isActive>false</isActive>
                <label>Failed Send</label>
            </value>
            <value>
                <fullName>Failed Workorder</fullName>
                <isActive>false</isActive>
                <label>Failed Workorder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>