force-app/main/default/objects/WorkOrder/fields/Send_Work_Order_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Send_Work_Order_to_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDT-4728 - Used to store Send Work Order to Vendor value from the Work Order Flow</description>
    <label>Send Work Order to Vendor</label>
    <type>Checkbox</type>
</CustomField>