force-app/main/default/objects/WorkOrder/fields/Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Sent_To__c</fullName>
    <label>Sent To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>