force-app/main/default/objects/WorkOrder/fields/Service_Exception_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Exception_Received_Date_Time__c</fullName>
    <description>S10_7602 : This field is use to store Service Exception Received Date and Time.</description>
    <label>Service Exception Received Date/Time</label>
    <type>DateTime</type>
</CustomField>