force-app/main/default/objects/WorkOrder/fields/Status_Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Status_Case_Subtype__c</fullName>
    <formula>TEXT(Status) + &quot; / &quot; + Case_Subtype__c</formula>
    <label>Status / Case Subtype</label>
    <type>Text</type>
</CustomField>