force-app/main/default/objects/WorkOrder/fields/Status_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Status_Send_Status__c</fullName>
    <formula>TEXT(Status) + &quot; / &quot; + TEXT(Send_Status__c)</formula>
    <label>Status / Send Status</label>
    <type>Text</type>
</CustomField>