force-app/main/default/objects/WorkOrder/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <description>Quantity in Tons</description>
    <label>Tonnage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>