force-app/main/default/objects/WorkOrder/fields/Vendor_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Exception_Reason__c</fullName>
    <description>Acorn Work Order Status Event - WorkOrder Sub Status information</description>
    <label>Vendor Exception Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>