force-app/main/default/objects/WorkOrder/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <formula>Vendor_Account_Id__r.Vendor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor ID</label>
    <type>Text</type>
</CustomField>