force-app/main/default/objects/WorkOrder/fields/Vendor_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Service_Status__c</fullName>
    <label>Vendor Service Status</label>
    <type>TextArea</type>
</CustomField>