force-app/main/default/objects/WorkOrder/fields/Verify_Service_Task__c.field-meta.xml
<CustomField>
    <fullName>Verify_Service_Task__c</fullName>
    <label>Verify Service Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATN</fullName>
                <label>Account Number</label>
            </value>
            <value>
                <fullName>WGS</fullName>
                <label>Wrong Service</label>
            </value>
            <value>
                <fullName>WTS</fullName>
                <label>Waste Stream</label>
            </value>
            <value>
                <fullName>RES</fullName>
                <label>Reschedule</label>
            </value>
            <value>
                <fullName>WRV</fullName>
                <label>Wrong Vendor/Out of Service Area</label>
            </value>
            <value>
                <fullName>SRI</fullName>
                <label>Service Interuption (Past Due Payments)</label>
            </value>
            <value>
                <fullName>WRC</fullName>
                <label>Wrong Cost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>