force-app/main/default/objects/WorkOrder/fields/WO_Accepted_Rejected_Comments__c.field-meta.xml
<CustomField>
    <fullName>WO_Accepted_Rejected_Comments__c</fullName>
    <label>WO Accepted/Rejected Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>